--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Show Directory Structure
+        run: |
+          echo "Listing the directory structure:"
+          ls # This will list the directory structure recursively
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
