--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -20,15 +20,14 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo ${{ secrets.GHCR }} | docker login ghcr.io -u AbhijeetRaj646 --password-stdin
 
-      - name: Show Directory Structure
+      - name: Show Directory Structure of `my-yii2-app`
+        working-directory: my-yii2-app  # Set working directory here
         run: |
-          echo "Listing the directory structure of the root folder:"
-          ls # This lists the root directory structure
-          echo "Navigating to my-yii2-app and listing its structure:"
-          cd demo-web-app/my-yii2-app
+          echo "Listing the directory structure of my-yii2-app:"
           ls -R # This lists the directory structure of my-yii2-app recursively
 
       - name: Build and Tag Docker Image
+        working-directory: my-yii2-app
         run: |
           docker build -t ghcr.io/AbhijeetRaj646/my-app:$GITHUB_SHA .
           docker tag ghcr.io/AbhijeetRaj646/my-app:$GITHUB_SHA ghcr.io/AbhijeetRaj646/my-app:latest
