--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: SSH into EC2 and Update Service with Rollback
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} bash -s << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }} bash -s << 'EOF'
             set -e
             docker pull ghcr.io/abhijeetraj646/my-app:$GITHUB_SHA
             if docker service update --image ghcr.io/abhijeetraj646/my-app:$GITHUB_SHA my-app-service; then
