--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -45,7 +45,7 @@ jobs:
       - name: SSH into EC2 and Update Service with Rollback
         run: |
           echo "Starting deployment over SSH to EC2..."
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} bash -s << EOF
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }} bash -s << EOF
             echo "[DEBUG] SSH connection established successfully ✅"
             echo "[DEBUG] Hostname: \$(hostname)"
             echo "[DEBUG] Current directory: \$(pwd)"
