--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -56,13 +56,27 @@ jobs:
             docker --version
       
             echo "[INFO] Logging in to GitHub Container Registry (GHCR)..."
+            echo "[DEBUG] Using GHCR_TOKEN to login."
             echo "\$GHCR_TOKEN" | docker login ghcr.io -u AbhijeetRaj646 --password-stdin
-            
-            echo "[DEBUG] GITHUB_SHA: \$GITHUB_SHA"  # Debugging the GITHUB_SHA value
-            
+            if [ $? -eq 0 ]; then
+              echo "[SUCCESS] Logged in to GHCR successfully."
+            else
+              echo "[ERROR] Failed to log in to GHCR."
+              exit 1
+            fi
+      
+            # Debugging the GITHUB_SHA value passed from GitHub Actions
+            echo "[DEBUG] GITHUB_SHA: \$GITHUB_SHA"  
+      
             set -e
             echo "[INFO] Pulling Docker image: ghcr.io/abhijeetraj646/my-app:\$GITHUB_SHA"
             docker pull ghcr.io/abhijeetraj646/my-app:\$GITHUB_SHA
+            if [ $? -eq 0 ]; then
+              echo "[SUCCESS] Docker image pulled successfully."
+            else
+              echo "[ERROR] Failed to pull Docker image."
+              exit 1
+            fi
       
             echo "[INFO] Attempting to update Docker service 'app_myapp'..."
             if docker service update --image ghcr.io/abhijeetraj646/my-app:\$GITHUB_SHA app_myapp; then
@@ -70,5 +84,11 @@ jobs:
             else
               echo "[ERROR] Update failed, rolling back..."
               docker service update --rollback app_myapp
+              if [ $? -eq 0 ]; then
+                echo "[SUCCESS] Rollback completed successfully. ✅"
+              else
+                echo "[ERROR] Failed to rollback Docker service."
+                exit 1
+              fi
             fi
           EOF
