--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -45,10 +45,12 @@ jobs:
       - name: SSH into EC2 and Deploy
         env:
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-          GITHUB_SHA: ${{ github.sha }}  # Pass the GITHUB_SHA from GitHub Actions
+          GITHUB_SHA: ${{ github.sha }}
         run: |
           echo "Starting deployment over SSH to EC2..."
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }} bash -s << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }} \
+            "export GHCR_TOKEN='${{ secrets.GHCR_TOKEN }}'; export GITHUB_SHA='${{ github.sha }}'; bash -s" << 'EOF'
+      
             echo "[DEBUG] SSH connection established successfully ✅"
             echo "[DEBUG] Hostname: \$(hostname)"
             echo "[DEBUG] Current directory: \$(pwd)"
@@ -57,34 +59,32 @@ jobs:
       
             echo "[INFO] Logging in to GitHub Container Registry (GHCR)..."
             echo "[DEBUG] Using GHCR_TOKEN to login."
-            # echo "\$GHCR_TOKEN" | docker login ghcr.io -u AbhijeetRaj646 --password-stdin
-            # if [ $? -eq 0 ]; then
+            echo "\$GHCR_TOKEN" | docker login ghcr.io -u AbhijeetRaj646 --password-stdin
+            # if [ \$? -eq 0 ]; then
             #   echo "[SUCCESS] Logged in to GHCR successfully."
             # else
             #   echo "[ERROR] Failed to log in to GHCR."
             #   exit 1
             # fi
       
-            # Debugging the GITHUB_SHA value passed from GitHub Actions
-            echo "[DEBUG] GITHUB_SHA: \$GITHUB_SHA"  
+            echo "[DEBUG] GITHUB_SHA: \$GITHUB_SHA"
       
-            set -e
             echo "[INFO] Pulling Docker image: ghcr.io/abhijeetraj646/demo-web-app/my-app:\$GITHUB_SHA"
             docker pull ghcr.io/abhijeetraj646/demo-web-app/my-app:\$GITHUB_SHA
-            if [ $? -eq 0 ]; then
-              echo "[SUCCESS] Docker image pulled successfully."
-            else
-              echo "[ERROR] Failed to pull Docker image."
-              exit 1
-            fi
+            # if [ \$? -eq 0 ]; then
+            #   echo "[SUCCESS] Docker image pulled successfully."
+            # else
+            #   echo "[ERROR] Failed to pull Docker image."
+            #   exit 1
+            # fi
       
-            echo "[INFO] Attempting to update Docker service  'app_myapp'..."
+            echo "[INFO] Attempting to update Docker service 'app_myapp'..."
             if docker service update --image ghcr.io/abhijeetraj646/demo-web-app/my-app:\$GITHUB_SHA app_myapp; then
               echo "[SUCCESS] Service updated successfully. ✅"
             else
               echo "[ERROR] Update failed, rolling back..."
               docker service update --rollback app_myapp
-              if [ $? -eq 0 ]; then
+              if [ \$? -eq 0 ]; then
                 echo "[SUCCESS] Rollback completed successfully. ✅"
               else
                 echo "[ERROR] Failed to rollback Docker service."
