--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -43,33 +43,11 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: SSH into EC2 and Deploy
-        env:
-          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-          GITHUB_SHA: ${{ github.sha }}
         run: |
           echo "Starting deployment over SSH to EC2..."
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }} \
-            "export GHCR_TOKEN='${{ secrets.GHCR_TOKEN }}'; export GITHUB_SHA='${{ github.sha }}'; bash -s" << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.PUBLICIP }}  << 'EOF'
       
-            echo "[DEBUG] SSH connection established successfully ✅"
-            echo "[DEBUG] Hostname: \$(hostname)"
-            echo "[DEBUG] Current directory: \$(pwd)"
-            echo "[DEBUG] Docker version:"
-            docker --version
-      
-            echo "[INFO] Logging in to GitHub Container Registry (GHCR)..."
-            echo "[DEBUG] Using GHCR_TOKEN to login."
-            echo "\$GHCR_TOKEN" | docker login ghcr.io -u AbhijeetRaj646 --password-stdin
-            # if [ \$? -eq 0 ]; then
-            #   echo "[SUCCESS] Logged in to GHCR successfully."
-            # else
-            #   echo "[ERROR] Failed to log in to GHCR."
-            #   exit 1
-            # fi
-      
-            echo "[DEBUG] GITHUB_SHA: \$GITHUB_SHA"
-      
-            echo "[INFO] Pulling Docker image: ghcr.io/abhijeetraj646/demo-web-app/my-app:\$GITHUB_SHA"
+            echo "[INFO] Pulling Docker image: ghcr.io/abhijeetraj646/demo-web-app/my-app:latest"
             docker pull ghcr.io/abhijeetraj646/demo-web-app/my-app:latest
             # if [ \$? -eq 0 ]; then
             #   echo "[SUCCESS] Docker image pulled successfully."
